Add local TLD ergonomics
